--- a/Store, Process, and Manage Data on Google Cloud - Command Line/Store, Process, and Manage Data on Google Cloud - Command Line Challenge Lab/ARC100/package.json
+++ b/Store, Process, and Manage Data on Google Cloud - Command Line/Store, Process, and Manage Data on Google Cloud - Command Line Challenge Lab/ARC100/package.json
@@ -6,6 +6,7 @@
       "start": "node index.js"
     },
     "dependencies": {
+      "@google-cloud/functions-framework": "^3.0.0",
       "@google-cloud/pubsub": "^2.0.0",
       "@google-cloud/storage": "^5.0.0",
       "fast-crc32c": "1.0.4",
